# oeuvres-sociales-5

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  .env.production.example  conftest.py  pyproject.toml  pytest.ini
backend/apps/administration/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/authentication/: serializers.py  urls.py  utils.py  views.py
backend/apps/beneficiaries/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/benefits/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py  workflow.py
backend/apps/conventions/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/dashboard/: models.py  serializers.py  urls.py  views.py
backend/apps/departments/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/employees/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/finance/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/core/: exceptions.py  log_context.py  logging_filters.py  managers.py  middleware.py  models.py  pagination.py  permissions.py  serializers.py
backend/requirements/: base.txt  development.txt  production.txt  test.txt
backend/shared/audit/: admin.py  apps.py  middleware.py  models.py  pyproject.toml  serializers.py  services.py  signals.py  urls.py  validation.py  views.py
backend/shared/audit/migrations/: 0001_initial.py  0002_alter_auditlog_action_validationtrace.py  0003_add_missing_auditlog_fields.py
backend/shared/notifications/: admin.py  apps.py  models.py  pyproject.toml  serializers.py  services.py  tasks.py  urls.py  views.py
backend/shared/notifications/migrations/: 0001_initial_notifications.py  0002_alter_notification_managers_and_more.py
backend/shared/permissions/: apps.py  pyproject.toml  rbac.py
backend/shared/reporting/: apps.py  models.py  pyproject.toml  serializers.py  services.py
backend/shared/workflow/: admin.py  apps.py  engine.py  models.py  pyproject.toml
backend/shared/workflow/api/: serializers.py  views.py
backend/shared/workflow/migrations/: 0001_initial.py  0002_dynamic_workflow_models.py  0003_seed_workflows.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  nginx-spa.conf
docs/api/: overview.md
docs/architecture/: enterprise-architecture-plan.md
docs/deployment/: checklist.md  guide.md  runbook.md
docs/developer/: contributing.md  setup.md
frontend/: .env.example  index.html  nginx-spa.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  test-setup.ts
nginx/conf.d/: default.conf  production.conf  production.conf.disabled
scripts/: backup.sh  deploy.sh  healthcheck.sh  init-db.sql  init-prod.sh  rotate-logs.sh  security-audit.sh  seed.sh
scripts/monitoring/: alerts.yml  grafana-dashboard.yml  grafana-datasource.yml  prometheus.yml
scripts/performance/: load-test.sh
(+300 files in other folders)
