[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "django-notification-engine"
version = "1.0.0"
description = "Generic Django notification engine with in-app, email, SMS, push channels"
authors = [{name = "Oeuvres Sociales"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0",
    "djangorestframework>=3.15",
    "celery>=5.4",
]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
include = ["shared.notifications*"]
