[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "django-permissions-engine"
version = "1.0.0"
description = "Generic Django RBAC/ABAC permissions engine"
authors = [{name = "Oeuvres Sociales"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0",
    "djangorestframework>=3.15",
]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
include = ["shared.permissions*"]
