[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "django-reporting-engine"
version = "1.0.0"
description = "Generic Django reporting engine with definitions, schedules, exports, KPIs, widgets"
authors = [{name = "Oeuvres Sociales"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0",
    "djangorestframework>=3.15",
    "celery>=5.4",
    "openpyxl>=3.1",
    "reportlab>=4.5",
    "croniter>=5.0",
]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
include = ["shared.reporting*"]
